# yomuyume-server

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20231113053712_users.sql  20231115111342_categories.sql  20231115111537_titles.sql  20231115112135_pages.sql  20231116035705_tags.sql  20231116040057_titles_tags.sql
src/: config.rs  main.rs
src/constants/: mod.rs
src/livescan/: blurhash.rs  handle_category.rs  handle_thumbnail.rs  handle_title.rs  mod.rs  scan_extracted.rs  scan_library.rs  scanner.rs  thumbnail_finder.rs  title_ssim_score.rs
src/middlewares/: auth.rs
src/migrator/: m_20231113_000001_create_users_table.rs  m_20231115_000002_create_categories_table.rs  m_20231115_000003_create_titles_table.rs  m_20231115_000004_create_pages_table.rs  m_20231116_000005_create_tags_table.rs  m_20231116_000006_create_titles_tags_table.rs  m_20231212_000007_create_bookmarks_table.rs  m_20231212_000008_create_thumbnails_table.rs  m_20231212_000009_create_favorites_table.rs  m_20231212_000010_create_progresses_table.rs  mod.rs
src/models/: auth.rs  bookmarks.rs  categories.rs  category.rs  favorites.rs  metadata.rs  mod.rs  page.rs  pages.rs  prelude.rs  progresses.rs  tags.rs  thumbnails.rs  title.rs  titles.rs  titles_ssim.rs  titles_tags.rs  user.rs  users.rs
src/routes/: auth.rs  categories.rs  mod.rs  pages.rs  status.rs  titles.rs  user.rs
src/routes/auth/: get_logout.rs  mod.rs  post_confirm.rs  post_forget.rs  post_login.rs  post_register.rs
src/routes/file/: get_page.rs  get_thumbnail.rs  mod.rs  thumbnail.rs
src/routes/index/: categories.rs  filter.rs  get_categories.rs  get_title.rs  mod.rs  post_filter.rs  title.rs
src/routes/middlewares/: auth.rs
src/routes/user/: delete.rs  favorite_bookmark.rs  get_check.rs  mod.rs  modify.rs  put_progress.rs  reset.rs  verify.rs
src/routes/utils/: get_scanning_progress.rs  get_tags.rs  mod.rs  ssim_eval.rs  status.rs
src/scanner/: mod.rs
src/utils/: blurhash.rs  build_resp.rs  check_pass.rs  find_title_info.rs  mod.rs  sendmail.rs
src/utils/blurhash/: mod.rs  transcode.rs
