[package]
name = "yomuyume-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = { version = "0.4.30", features = ["serde"] }
dotenvy = "0.15.7"
http-serde = "1.1.3"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = { version = "3.5.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
