[package]
name = "yomuyume-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
axum-macros = "0.4.0"
chrono = { version = "0.4.30", features = ["serde"] }
dotenvy = "0.15.7"
http-serde = "2.0.0"
jsonwebtoken = "9.2.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "mock",
    "with-chrono",
    "with-time",
    "with-uuid",
    "sqlx-sqlite",
] }
sea-orm-migration = "0.12.6"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde-email = "3.0.0"
serde_json = "1.0.108"
time = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = { version = "4.1.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
axum-test = "14.0.0"
